Added "Local Path" option in connection dialog. This enables us to upload files and folders relative to any directory inside project tree instead of project root. For example, if we want to upload files from project directory "source/project-name/www/css/index.css" to remote "/www/css/index.css", then we can set Local Path to "source/project-name/www/" and remote path to "/www/".

--- a/html/dialog_connection.html
+++ b/html/dialog_connection.html
@@ -33,6 +33,9 @@
 					<tr><th>{{MyStrings.TXT_CONNECTION_PASSWORD}}</th><td>
 						<input type="password" class="input-password"/>
 					</td></tr>
+					<tr><th>{{MyStrings.TXT_CONNECTION_LOCAL_PATH}}</th><td>
+						<input type="text" class="input-local-path"/>
+					</td></tr>
 					<tr><th>{{MyStrings.TXT_CONNECTION_SERVER_PATH}}</th><td>
 						<input type="text" class="input-server-path"/>
 					</td></tr>
@@ -60,6 +63,9 @@
 					</td></tr>
 					<tr><th>{{MyStrings.TXT_CONNECTION_PASSWORD}}</th><td>
 						<input type="password" class="input-password-p"/>
+					</td></tr>
+					<tr><th>{{MyStrings.TXT_CONNECTION_LOCAL_PATH}}</th><td>
+						<input type="text" class="input-local-path-p"/>
 					</td></tr>
 					<tr><th>{{MyStrings.TXT_CONNECTION_SERVER_PATH}}</th><td>
 						<input type="text" class="input-server-path-p"/>
