ローカル保存機能・変更ログ機能追加

--- a/html/dialog_configuration.html
+++ b/html/dialog_configuration.html
@@ -5,6 +5,7 @@
 	<div class="modal-body">
 		<p class="description">{{MyStrings.TXT_CONNECTION_1}}<br><small>{{MyStrings.TXT_CONNECTION_2}}</small><br><small>{{MyStrings.TXT_CONNECTION_3}}</small></p>
 		<table>
+			<tr><th>{{MyStrings.TXT_USER_NAME}}</th><td><input type="text" class="user_name" placeholder="(optional)" /></td></tr>
 			<tr><th>{{MyStrings.TXT_STORAGE_LOCATION}}</th><td><input type="text" class="location_path" /> <span class="btn dialog-button-reference">{{MyStrings.TXT_REFERENCE}}</span></td></tr>
 		</table>
 	</div>
