--- a/html/dialog_server_manager.html
+++ b/html/dialog_server_manager.html
@@ -13,12 +13,14 @@
 				<p><button class="btn btn-conection">{{MyStrings.TXT_CONNECTION_UPDATE}}</button></p>
 				<div class="jstree jstree-brackets">
 					<p>{{MyStrings.TXT_SERVER_NO_SFTP}}</p>
+					<div class="jstree-brackets-wrap"></div>
 				</div>
 			</div>
 			<div id="tab2" class="tab-pane" data-location="production">
 				<p><button class="btn btn-conection">{{MyStrings.TXT_CONNECTION_UPDATE}}</button></p>
 				<div class="jstree jstree-brackets">
 					<p>{{MyStrings.TXT_SERVER_NO_SFTP}}</p>
+					<div class="jstree-brackets-wrap"></div>
 				</div>
 			</div>
 		</div>
