--- a/html/dialog_modify_log.html
+++ b/html/dialog_modify_log.html
@@ -12,7 +12,7 @@
 		<div class="table-wrap">
 			<table>
 				<thead>
-					<tr><th>{{MyStrings.TXT_MF_PATH}}</th><th>{{MyStrings.TXT_MF_DATE}}</th><th>{{MyStrings.TXT_MF_USER}}</th></tr>
+					<tr><th class="s-p" data-type=“string” data-sortoder=-1>{{MyStrings.TXT_MF_PATH}}<span></span></th><th class="s-d" data-type=“string” data-sortoder=-1>{{MyStrings.TXT_MF_DATE}}<span></span></th><th class="s-u" data-type=“string” data-sortoder=-1>{{MyStrings.TXT_MF_USER}}<span></span></th></tr>
 				</thead>
 				<tbody></tbody>
 			</table>
