公開パス設定機能

--- a/html/dialog_connection.html
+++ b/html/dialog_connection.html
@@ -40,6 +40,9 @@
 					<tr class="ftp sftp local"><th>{{MyStrings.TXT_CONNECTION_UPLOAD_ON_SAVE}}</th><td>
 						<input type="checkbox" class="input-save" />
 					</td></tr>
+					<tr class="ftp sftp"><th>{{MyStrings.TXT_CONNECTION_SITE_URL}}</th><td>
+						<input type="text" class="input-site-url"/>
+					</td></tr>
 				</table>
 			</div>
 			<div id="tab2" class="tab-pane">
@@ -65,6 +68,9 @@
 					</td></tr>
 					<tr class="ftp sftp"><th>{{MyStrings.TXT_CONNECTION_SERVER_PATH}}</th><td>
 						<input type="text" class="input-server-path-p"/>
+					</td></tr>
+					<tr class="ftp sftp"><th>{{MyStrings.TXT_CONNECTION_SITE_URL}}</th><td>
+						<input type="text" class="input-site-url-p"/>
 					</td></tr>
 				</table>
 			</div>
