--- a/html/dialog_ftp_log.html
+++ b/html/dialog_ftp_log.html
@@ -1,6 +1,6 @@
 <div id="au-ssftp-ftp_log_panel" class="bottom-panel">
 	<div class="toolbar simple-toolbar-layout">
-		<div class="title"><small>{{MyStrings.EXTENSION_NAME}} - </small>{{MyStrings.TXT_FTP_LOG}}</div>
+		<div><span class="title"><small>{{MyStrings.EXTENSION_NAME}} - </small>{{MyStrings.TXT_FTP_LOG}} </span><a href="" target="_blank" class="btn-test btn">{{MyStrings.TXT_TESTING_ENVIRONMENT_OPEN}}</a> <a href="" target="_blank" class="btn-production btn">{{MyStrings.TXT_PRODUCTION_ENVIRONMENT_OPEN}}</a></div>
 		<a href="#" class="close">&times;</a>
 	</div>
  	<ul>
