--- a/html/dialog_connection.html
+++ b/html/dialog_connection.html
@@ -17,9 +17,9 @@
 				<table class="selectVal">
 					<tr class="ftp sftp local"><th>{{MyStrings.TXT_CONNECTION_TYPE}}</th><td>
 						<select class="input-method">
-							<option value="ftp" selected>{{ MyStrings.TXT_SETTINGS_DIALOG_TYPE_FTP }}</option>
-							<option value="sftp">{{ MyStrings.TXT_SETTINGS_DIALOG_TYPE_SFTP }}</option>
-							<option value="local">{{ MyStrings.TXT_SETTINGS_DIALOG_TYPE_LOCAL }}</option>
+							<option value="ftp" selected>{{MyStrings.TXT_SETTINGS_DIALOG_TYPE_FTP}}</option>
+							<option value="sftp">{{MyStrings.TXT_SETTINGS_DIALOG_TYPE_SFTP}}</option>
+							<option value="local">{{MyStrings.TXT_SETTINGS_DIALOG_TYPE_LOCAL}}</option>
 						</select>
 					</td></tr>
 					<tr class="ftp sftp local"><th>{{MyStrings.TXT_CONNECTION_HOST}}</th><td>
@@ -41,7 +41,7 @@
 						<input type="checkbox" class="input-save" />
 					</td></tr>
 					<tr class="ftp sftp"><th>{{MyStrings.TXT_CONNECTION_SITE_URL}}</th><td>
-						<input type="text" class="input-site-url"/>
+						<input type="text" class="input-site-url" placeholder="(optional)"/>
 					</td></tr>
 				</table>
 			</div>
@@ -49,9 +49,9 @@
 				<table class="selectVal">
 					<tr class="ftp sftp local"><th>{{MyStrings.TXT_CONNECTION_TYPE}}</th><td>
 						<select class="input-method-p">
-							<option value="ftp" selected>{{ MyStrings.TXT_SETTINGS_DIALOG_TYPE_FTP }}</option>
-							<option value="sftp">{{ MyStrings.TXT_SETTINGS_DIALOG_TYPE_SFTP }}</option>
-							<option value="local">{{ MyStrings.TXT_SETTINGS_DIALOG_TYPE_LOCAL }}</option>
+							<option value="ftp" selected>{{MyStrings.TXT_SETTINGS_DIALOG_TYPE_FTP}}</option>
+							<option value="sftp">{{MyStrings.TXT_SETTINGS_DIALOG_TYPE_SFTP}}</option>
+							<option value="local">{{MyStrings.TXT_SETTINGS_DIALOG_TYPE_LOCAL}}</option>
 						</select>
 					</td></tr>
 					<tr class="ftp sftp local"><th>{{MyStrings.TXT_CONNECTION_HOST}}</th><td>
@@ -70,7 +70,7 @@
 						<input type="text" class="input-server-path-p"/>
 					</td></tr>
 					<tr class="ftp sftp"><th>{{MyStrings.TXT_CONNECTION_SITE_URL}}</th><td>
-						<input type="text" class="input-site-url-p"/>
+						<input type="text" class="input-site-url-p" placeholder="(optional)"/>
 					</td></tr>
 				</table>
 			</div>
