--- a/html/dialog_recently_changed_files.html
+++ b/html/dialog_recently_changed_files.html
@@ -4,7 +4,7 @@
 		<div class="btw">
 			<p class="bt1"><button class="btn btn-update">{{MyStrings.TXT_UN_SELECT}}</button></p>
 			<p class="bt1"><button class="btn btn-all-select">{{MyStrings.TXT_ALL_SELECT}}</button></p>
-			<p class="bt2">対象フォルダ : <input type="text" class="input-target"/>　除外 : <input type="text" class="input-exclusion" value=".DS_Store,_notes,dwsync.xml"/>　{{MyStrings.TXT_RECRNT_CHANGE_FILE_2}} <input type="text" class="input-day"/> {{MyStrings.TXT_RECRNT_CHANGE_FILE_3}} <button class="btn btn-search">{{MyStrings.TXT_SEARCH}}</button><span class="btn btn-searching">{{MyStrings.TXT_SEARCHING}}</span></p>
+			<p class="bt2">{{MyStrings.TXT_TARGET_FORDER}} : <input type="text" class="input-target"/> {{MyStrings.TXT_EXCLUSION}} : <input type="text" class="input-exclusion" value=".DS_Store,_notes,dwsync.xml"/>　{{MyStrings.TXT_RECRNT_CHANGE_FILE_2}} <input type="text" class="input-day"/> {{MyStrings.TXT_RECRNT_CHANGE_FILE_3}} <button class="btn btn-search">{{MyStrings.TXT_SEARCH}}</button><span class="btn btn-searching">{{MyStrings.TXT_SEARCHING}}</span></p>
 		</div>
 	</div>
 	<div class="modal-body">
